fix(html): add spacing between adjacent ODD links
- insert XSL templates to emit spaces between consecutive refs
- disable redundant CSS targeting link_odd_dataSpec anchors

--- a/assets/css/tei.lex0.web.css
+++ b/assets/css/tei.lex0.web.css
@@ -772,13 +772,13 @@ blockquote.quote {
 }
 
 /* in data types */
-div.parent a.link_odd_dataSpec {
+/* div.parent a.link_odd_dataSpec {
   display: block;
 }
 
 a.link_odd_elementSpec + a.link_odd_elementSpec {
   margin-left: 0.1em;
-}
+} */
 
 div.parent ul {
   margin-block-start: 0em;
